Add multi-account support

--- a/deployment/tagtamer_public.yaml
+++ b/deployment/tagtamer_public.yaml
@@ -23,6 +23,10 @@ Metadata:
           default: "Cognito Identity Pool configuration"
         Parameters: 
           - TagTamerIdentityPoolName
+      - Label:
+          default: "List of multiple AWS account numbers to manage"
+        Parameters:
+           - TagTamerMultiAccounts
 
 Parameters:
   KeyName:
@@ -41,14 +45,12 @@ Parameters:
     Type: String
     MinLength: 9
     MaxLength: 18
-#    Default: 0.0.0.0/0
     AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
   Certificate:
     Description: >-
       Name of the certificate to use for ALB SSL connections.
       Example: arn:aws:acm-pca:region:account:certificate-authority/resource-identifier
     Type: String
-#    Default: arn:aws:acm:region:accountid:certificate/certificateid
   Email:
     Type: String
     Description: Source email address for sending emails to new users.  Must be an SES validated address.
@@ -60,7 +62,10 @@ Parameters:
     Type: String
     Default: tag_tamer_identity_pool
     Description: Name of Tag Tamer's Amazon Cognito Identity Pool
-
+  TagTamerMultiAccounts:
+    Type: String
+    Description: Comma separated list of AWS account numbers Tag Tamer should manage.  Do not include the account number where the Tag Tamer EC2 instance is deployed.
+  
 Mappings:
   SourceCode:
     General:
@@ -746,6 +751,13 @@ Resources:
       Name: /tag-tamer/cognito-identity-pool-id-value
       Type: String
       Value: !Ref TagTamerCognitoIdentityPool
+  
+  TagTamerMultiAccountsList:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: /tag-tamer/multi-accounts
+      Type: String
+      Value: !Ref TagTamerMultiAccounts
 
   UserPoolClientRole:
   # Created to execute Lambda which gets userpool app client config values
