Update CfnNag exception & template version number

--- a/deployment/tagtamer_private.yaml
+++ b/deployment/tagtamer_private.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: AWS Cloudformation template for TagTamer solution components - version - RC12
+Description: AWS Cloudformation template for TagTamer solution components - version - RC13
 Metadata: 
   AWS::CloudFormation::Interface: 
     ParameterGroups: 
@@ -303,6 +303,12 @@ Resources:
         EmailMessage: 'Your Tag Tamer verification code is {####}. '
         EmailSubject: Your Tag Tamer verification code
         DefaultEmailOption: CONFIRM_WITH_CODE
+    Metadata:
+        cfn_nag:
+          rules_to_suppress:
+          - id: F78
+            reason: "Works as designed.  If Tag Tamer admins choose to require MFA for access, they can enable it."
+
   TagTamerUserPoolDomain:
     Type: AWS::Cognito::UserPoolDomain
     Properties:
